@@ -43,6 +43,9 @@ if ($action == "store")
    if (isset($_POST["heatingType"]))
       $_SESSION['heatingType'] = htmlspecialchars($_POST["heatingType"]);
 
+   if (isset($_POST["schema"]))
+      $_SESSION['schema'] = htmlspecialchars($_POST["schema"]);
+
    if (isset($_POST["style"]))
       $style = htmlspecialchars($_POST["style"]);
    
@@ -101,6 +104,7 @@ if ($action == "store")
    writeConfigItem("tsync", $_SESSION['tsync']);
    writeConfigItem("maxTimeLeak", $_SESSION['maxTimeLeak']);
    writeConfigItem("heatingType", $_SESSION['heatingType']);
+   writeConfigItem("schema", $_SESSION['schema']);
 
    if ($_POST["passwd2"] != "")
    {
@@ -152,6 +156,7 @@ seperator("Sonstiges", 0, 2);
 configBoolItem("Tägliche Zeitsynchronisation", "tsync", $_SESSION['tsync'], "Zeit der Heizung täglich um 23:00 synchronisieren?");
 configStrItem("Maximale Abweichung [s]", "maxTimeLeak", $_SESSION['maxTimeLeak'], "Abweichung ab der die tägliche Synchronisation ausgeführt wird");
 heatingTypeItem("Heizung", $_SESSION['heatingType']);
+schemaItem("Schema", $_SESSION['schema']);
 
 echo "      </form>\n";
 
@@ -218,6 +223,29 @@ function heatingTypeItem($title, $type)
    {
       $sel = $actual == $filename ? "SELECTED" : "";
       $tp = substr(strstr($filename, ".", true), 8);
+      echo "            <option value='$tp' " . $sel . ">$tp</option>\n";
+   }
+   
+   echo "          </select>\n";
+   echo "        </div><br/>\n";
+}
+
+// ---------------------------------------------------------------------------
+// Schema Selection
+// ---------------------------------------------------------------------------
+
+function schemaItem($title, $schema)
+{
+   $actual = "schema-$schema.png";
+   
+   echo "        <div class=\"input\">\n";
+   echo "          $title: \n";
+   echo "          <select class=checkbox name=\"schema\">\n";
+   
+   foreach (glob("schema-*.png") as $filename) 
+   {
+      $sel = $actual == $filename ? "SELECTED" : "";
+      $tp = substr(strstr($filename, ".", true), 7);
       echo "            <option value='$tp' " . $sel . ">$tp</option>\n";
    }
    
