@@ -38,6 +38,7 @@ if (!isset($_SESSION['initialized']) || !$_SESSION['initialized'])
    readConfigItem("tsync", $_SESSION['tsync']);
    readConfigItem("maxTimeLeak", $_SESSION['maxTimeLeak']);
    readConfigItem("heatingType", $_SESSION['heatingType']);
+   readConfigItem("schema", $_SESSION['schema']);
    
    // ------------------
    // check for defaults
@@ -50,6 +51,9 @@ if (!isset($_SESSION['initialized']) || !$_SESSION['initialized'])
    
    if ($_SESSION['heatingType'] == "")
       $_SESSION['heatingType'] = "p4";
+
+   if ($_SESSION['schema'] == "")
+      $_SESSION['schema'] = "p4-2hk-puffer";
 
    mysql_close();
 }
